--- a/productos.html
+++ b/productos.html
@@ -5,11 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>productos</title>
+    <link rel="stylesheet" href="estilos.css" />
 </head>
 <body>
+    <div class="encabezado"> 
+        <img src="./imagenes/logo.jpg" id="imagenes" alt="logo">
+      </div>
+      <header>
+        <div>
+          <button class="boton1">Buscar</button>
+          <label for="">
+            <input type="text" name="" id="barraDeBusqueda" />
+            
+        </div>
+        <h1>Productos</h1>
     <header>
         <nav>
-            <ul>
+            <ul class="navbar">
                 <li>
                     <a href="./index.html">inicio</a>
                 </li>
@@ -28,6 +40,33 @@
             </ul>
         </nav>
     </header>
-    <h1>RENY</h1>
+    <div>
+        <h3>¿que tipo de ropa prefieres</h3>
+        <label for="">Formal</label>
+        <input type="checkbox" name="" id="" />
+        <label for="">Casual</label>
+        <input type="checkbox" name="" id="" />
+        <label for="">Deportiva</label>
+        <input type="checkbox" name="" id="" />
+      </div>
+    <div>
+        <h4>¿qué buscas?</h4>
+        <section class="catalogo">
+          <img src="./imagenes/blusa.jpg" alt="" height="100px">
+          <img src="./imagenes/jeans.jpg" alt="" height="100px">
+          <img src="./imagenes/chamarra.jpg" alt="" height="100px">
+          <img src="./imagenes/sudaderas.jpg" alt="" height="100px">
+          <img src="./imagenes/mamelucos.jpg" alt="" height="100px">
+          <img src="./imagenes/vestido niña.jpg" alt="" height="100px">
+        </section>
+        <select name="" id="">
+          <option value="Pantalones">Pantalones</option>
+          <option value="Faldas">Faldas</option>
+          <option value="Camisas">Camisas</option>
+          <option value="Blusas">Blusas</option>
+          <option value="Chamarras">Chamarras</option>
+        </select>
+      </div>
+
 </body>
 </html>
