--- a/referencias.html
+++ b/referencias.html
@@ -5,11 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Referencias</title>
+    <link rel="stylesheet" href="estilos.css" />
 </head>
 <body>
+    <div class="encabezado"> 
+        <img src="./imagenes/logo.jpg" id="imagenes" alt="logo">
+      </div>
+      <header>
+        <div>
+          <button class="boton1">Buscar</button>
+          <label for="">
+            <input type="text" name="" id="barraDeBusqueda" />
+            
+        </div>
+        <h1>Referencias</h1>
     <header>
         <nav>
-            <ul>
+            <ul class="navbar">
                 <li>
                     <a href="./index.html">Inicio</a>
                 </li>
@@ -28,6 +40,5 @@
             </ul>
         </nav>
     </header>
-    <h1>RENY</h1>
 </body>
 </html>
