--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=, initial-scale=1.0" />
+    <meta name="viewport" content="with=, initial-scale=1.0" />
     <title>RENY</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="estilos.css" />
@@ -104,12 +104,6 @@
           referrerpolicy="no-referrer-when-downgrade"
         ></iframe>
       </div>
-      <section>
-        <aside>
-          <img src="./ig.jpg" alt="instagram" />
-          <img src="./whats.jpg" alt="whats app" />
-        </aside>
-      </section>
     </main>
     <main>
       <section>
@@ -123,6 +117,7 @@
           <input type="email" name="" placeholder="Ingresa tu email" id="" />
           <input type="password" name="" placeholder="contraseña" id="" />
           <input class="enviar" type="submit" value="Enviar" />
+          <input class="cancelar" type="submit" value="Cancelar" />
           </div>
           <div>
             <h4>¿qué buscas?</h4>
@@ -149,5 +144,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <script src="https://code.iconify.design/iconify-icon/1.0.1/iconify-icon.min.js"></script>
     <script src="./scripts/index.js"></script></script>
+    <script src="./scripts/funciones.js"></script>
   </body>
 </html>
